--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "browser": "dist/aos.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/michalsnik/aos.git"
+    "url": "git+https://github.com/michalsnik/aos.git"
   },
   "bugs": {
     "url": "https://github.com/michalsnik/aos/issues"
@@ -27,7 +27,7 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
-    "live-server": "tapio/live-server#master",
+    "live-server": "github:tapio/live-server#master",
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.3",
     "rollup": "^0.58.2",
@@ -55,5 +55,6 @@
   "files": [
     "dist",
     "src"
-  ]
+  ],
+  "keywords": []
 }
